--- a/src/styles.css
+++ b/src/styles.css
@@ -102,3 +102,29 @@ body {
         margin: 0;
         margin-bottom:24px
       }
+
+      .carousel2-item {
+        display: block;
+        padding: none;
+        margin-top: 24px;
+      }
+    
+      .Tags {
+        width: 25%;
+        background-color: #E9F1F5;
+        border-radius: 24px;
+        padding: 24px;
+        margin-right: 24px;
+        box-shadow: 10px 3px solid #000;
+      }
+    
+      .left-side2 {
+        display: flex;
+        flex-direction: wrap;
+      }
+    
+      h4 {
+        margin: 0;
+        font-size: 32px;
+        font-weight: bold;
+      }
